--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 200px;
 }
 .orange-text {
   color: #fd6e0a;
@@ -36,4 +37,16 @@ nav li {
 }
 nav a {
   text-decoration: none;
+}
+/* Header related styles */
+.header{
+  background-color:#FFF8F3;;
+}
+.banner{
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.profile-picture{
+  width: 500px;
 }
