--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,34 @@
-/* Font styles */
+/* Common shared styles */
 body {
   font-family: "Lato", sans-serif;
   font-family: "Open Sans", sans-serif;
+}
+
+.orange-text {
+  color: #fd6e0a;
+}
+.btn-primary {
+  border-radius: 5px;
+  background: #fd6e0a;
+  color: #fff;
+  border: 0px;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 16px 35.5px;
+}
+/* Section Details */
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
 }
 /* nav styles */
 nav {
@@ -9,18 +36,6 @@ nav {
   align-items: center;
   justify-content: space-between;
   margin: 0 200px;
-}
-.orange-text {
-  color: #fd6e0a;
-}
-.btn-primary {
-  border-radius: 5px;
-  background: #fd6e0a;
-  color: #FFF;
-  border: 0px;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 16px 35.5px;
 }
 .nav-title {
   color: var(--Dark-01, #181818);
@@ -39,14 +54,69 @@ nav a {
   text-decoration: none;
 }
 /* Header related styles */
-.header{
-  background-color:#FFF8F3;;
+.header {
+  background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-  padding: 30px 30px 30px 150px;
+.banner {
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
-.profile-picture{
+.banner-content {
+  max-width: 500px;
+}
+.profile-picture {
   width: 500px;
+}
+.greeting {
+  color: #474747;
+  font-size: 45px;
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+.banner-title {
+  color: #181818;
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-description {
+  margin-bottom: 30px;
+}
+/* Main section styles Start  */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+/* about section styles start */
+.about {
+  padding: 131px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin-top: 130px;
+}
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+}
+.info-title{
+  color: #757575;
+text-align: center;
+font-size: 20px;
+font-weight: 400;
+
+}
+.info-description {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
 }
