--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,7 +28,6 @@ body {
   text-align: center;
   font-size: 18px;
   font-weight: 400;
-  line-height: 30px; /* 166.667% */
 }
 /* nav styles */
 nav {
@@ -93,6 +92,9 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-top: 130px;
+}
 
 /* about section styles start */
 .about {
@@ -108,15 +110,90 @@ main {
 .about-info {
   text-align: center;
 }
-.info-title{
+.info-title {
   color: #757575;
-text-align: center;
-font-size: 20px;
-font-weight: 400;
-
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
 }
 .info-description {
   color: #474747;
   font-size: 20px;
   font-weight: 700;
+}
+/* Skills related style */
+#what {
+  padding: 35px 155px;
+}
+.skill-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+}
+/* Resume related Styles */
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+.resume-container {
+  display: flex;
+  gap: 71px;
+  align-items: center;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+}
+.resume-item-description,
+.resume-item-institution {
+  color: #757575;
+
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.resume-item-institution {
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+.resume-container hr {
+  margin: 30px 0;
+}
+.download-cv {
+  text-align: center;
+  margin-top: 50px;
+}
+/* Footer Styles */
+footer {
+  display: flex;
+  gap: 100px;
+  margin-top: 100px;
+  padding: 130px 200px;
+  background: #fff8f3;
+}
+.footer-column {
+  width: 50%;
+}
+.contact input[type="text"], .contact input[type="email"],
+textarea {
+  display: block;
+  margin-bottom: 24px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  background: #fff;
+  border: 0;
+  width: 400px;
+
 }
